# nothing-browser

./: .gitignore  CMakeLists.txt  Readme.MD  fix_devtools.sh  install.sh  nothing-browser-key.gpg  version.json
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-release.yml
assets/: resources.qrc
core/: main.cpp  main_headful.cpp  main_headless.cpp
core/app/: MainWindow.cpp  MainWindow.h
core/engine/: CdpProbe.cpp  CdpProbe.h  FingerprintSpoofer.cpp  FingerprintSpoofer.h  IdentityGenerator.cpp  IdentityStore.cpp  IdentityStore.h  Interceptor.cpp  NetworkCapture.cpp  NetworkCapture.h  PiggyServer.cpp  PiggyServer.h  PluginManager.cpp  PluginManager.h  ProxyManager.cpp  ProxyManager.h  UpdateChecker.cpp  UpdateChecker.h
core/engine/piggy/: PiggyCaptcha.cpp  PiggyCaptcha.h  PiggyCapture.cpp  PiggyCommandRouter.cpp  PiggyCookieInject.cpp  PiggyCookieInject.h  PiggyDialog.cpp  PiggyDialog.h  PiggyExport.cpp  PiggyFind.cpp  PiggyFind.h  PiggyHttp.cpp  PiggyHuman.cpp  PiggyHuman.h  PiggyIframe.cpp  PiggyIframe.h  PiggyInnerStorage.cpp  PiggyInnerStorage.h  PiggyInteractions.cpp  PiggyMedia.cpp  PiggyMedia.h  PiggyMediaCapture.cpp  PiggyMediaCapture.h  PiggyNavigation.cpp  PiggyPage.cpp  PiggyPage.h  PiggyProvide.cpp  PiggyProvide.h  PiggyProxy.cpp  PiggyProxy.h  PiggyQR.cpp  PiggyQR.h  PiggyServer.cpp  PiggyServer.h  PiggyTabManager.cpp  PiggyWait.cpp  PiggyWait.h  Sessionmanager.cpp  Sessionmanager.h
core/tabs/: BrowserTab.cpp  BrowserTab.h  DevToolsPanel.cpp  DevToolsPanel.h  DevToolsPanel_Actions.cpp  DevToolsPanel_Constructor.cpp  DevToolsPanel_DataIngestion.cpp  DevToolsPanel_Helpers.cpp  DevToolsPanel_RowSelection.cpp  DevToolsPanel_WelcomeScreen.cpp  NewsTab.cpp  NewsTab.h  PiggyTab.cpp  PiggyTab.h  PluginsTab.cpp  PluginsTab.h  ProxyPanel.cpp  ProxyPanel.h  WelcomeScreen.h  YoutubeTab.cpp  YoutubeTab.h
newpipe/: .txt
newpipe-bridge/: YoutubeTab.cpp  YoutubeTab.h  build.gradle  settings.gradle
newpipe-bridge/scripts/: build-newpipe.sh
newpipe-bridge/src/main/java/dev/nothingbrowser/bridge/: DownloadCommand.java  InfoCommand.java  Main.java  NewPipeInit.java  SearchCommand.java
nothing-browser-installer/: README.txt  nothing-browser-setup.iss
nothing-browser-installer/assets/: README.txt
scripts/: PKGBUILD  build-deb.sh  build-windows.bat  nothing-browser.rb  release.sh  wa-session-export.ts
